force-app/main/default/objects/SSResponseEvent__e/SSResponseEvent__e.object-meta.xml
<CustomObject>
    <description>Evento que se dispara una vez se ha enviado a SS información de un registro y obtenido una respuesta.</description>
    <label>SS Response Event</label>
    <pluralLabel>SS Response Events</pluralLabel>
</CustomObject>