force-app/main/default/objects/SSResponseEvent__e/fields/isCreationEvent__c.field-meta.xml
<CustomField>
    <fullName>isCreationEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verifica si el evento se dispara durante la creación de un registro</description>
    <label>is Create Event</label>
    <type>Checkbox</type>
</CustomField>