force-app/main/default/objects/SSResponseEvent__e/fields/isErrorEvent__c.field-meta.xml
<CustomField>
    <fullName>isErrorEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si ocurre un error en SS al enviar el registro, marcar como true</description>
    <label>error</label>
    <type>Checkbox</type>
</CustomField>