force-app/main/default/objects/SSResponseEvent__e/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <description>Mensaje de error de SS al enviar un registro fallido.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>