force-app/main/default/objects/SSResponseEvent__e/fields/recordId__c.field-meta.xml
<CustomField>
    <fullName>recordId__c</fullName>
    <description>Id Salesforce del registro enviado a SS</description>
    <label>RecordId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>